Implementación del sistema multilenguaje + PT (Brasil)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Raul Nivelazo – Portafolio Técnico</title>
+    <title data-lang="page_title">Raul Nivelazo – Portafolio Técnico</title>
 
     <!-- FUENTE TIPOGRÁFICA -->
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
@@ -32,26 +32,31 @@
         <div class="lang-spacer"></div>
 
         <!-- Buscador -->
-        <div class="search-box">
+        <form class="search-box" role="search" onsubmit="return false;">
             <label for="search" class="search-icon">
                 <i data-lucide="search-code" class="icon-search"></i>
             </label>
-            <input type="text" id="search" placeholder="Buscar en el sitio..." autocomplete="off" />
-        </div>
+            <input
+                    type="text"
+                    id="search"
+                    placeholder="Buscar en el sitio..."
+                    autocomplete="off"
+                    aria-label="Buscar artículos"
+            />
+        </form>
 
         <!-- Botones de idioma -->
         <div class="lang-buttons">
-            <button id="btn-es">ES</button>
-            <button id="btn-en">EN</button>
+            <button id="btn-es" aria-label="Idioma español">ES</button>
+            <button id="btn-en" aria-label="Idioma inglés">EN</button>
+            <button id="btn-pt-br" aria-label="Idioma portugués (Brasil)">PT</button>
         </div>
     </div>
-
 
     <main>
         <h1 data-lang="title">Bienvenido a mi sitio web</h1>
         <p data-lang="description">
-            Este es un espacio en construcción para compartir mis proyectos, ideas y reflexiones sobre arte técnico y
-            desarrollo de videojuegos.
+            Este es un espacio en construcción para compartir mis proyectos, ideas y reflexiones sobre arte técnico y desarrollo de videojuegos.
         </p>
 
         <!-- Artículos -->
