Refinamiento de la estética general. Pixel Art.

--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title data-lang="page_title">Raul Nivelazo – Portafolio Técnico</title>
 
     <!-- FUENTE TIPOGRÁFICA -->
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet"/>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css"/>
 
     <!-- ICONOS -->
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- FAVICON -->
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico"/>
 
     <!-- SEO -->
-    <meta name="description" content="Sitio oficial de Raul Nivelazo (Raul Andres Aguilera Rosales), artista 3D y desarrollador técnico en Unity.">
+    <meta name="description"
+          content="Sitio oficial de Raul Nivelazo (Raul Andres Aguilera Rosales), artista 3D y desarrollador técnico en Unity.">
 </head>
 
-<body>
+<body class="loading">
+
 
 <div class="container">
 
@@ -39,7 +41,7 @@
             <input
                     type="text"
                     id="search"
-                    placeholder="Buscar en el sitio..."
+                    placeholder="Buscar..."
                     autocomplete="off"
                     aria-label="Buscar artículos"
             />
@@ -47,6 +49,7 @@
 
         <!-- Botones de idioma -->
         <div class="lang-buttons">
+            
             <button id="btn-es" aria-label="Idioma español">ES</button>
             <button id="btn-en" aria-label="Idioma inglés">EN</button>
             <button id="btn-pt-br" aria-label="Idioma portugués (Brasil)">PT</button>
@@ -56,9 +59,9 @@
     <main>
         <h1 data-lang="title">Bienvenido a mi sitio web</h1>
         <p data-lang="description">
-            Este es un espacio en construcción para compartir mis proyectos, ideas y reflexiones sobre arte técnico y desarrollo de videojuegos.
+            Este es un espacio en construcción para compartir mis proyectos, ideas y reflexiones sobre arte técnico y
+            desarrollo de videojuegos.
         </p>
-
         <!-- Artículos -->
         <div class="articles-wrapper">
             <div class="articles-grid" id="articles-container">
