Refinamiento estético. Buscador.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     placeholder="Buscar..."
                     autocomplete="off"
                     aria-label="Buscar artículos"
+                    maxlength="60"
             />
         </form>
 
