Mejoras funcionales de lista de retos. Condiciones y formatos.

--- a/retos-academia/index.html
+++ b/retos-academia/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Retos Academia</title>
+
+    <!-- Estilos propios -->
     <link rel="stylesheet" href="retos.css" />
+
+    <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -17,12 +21,10 @@
 <!-- Menú lateral -->
 <nav id="mySidenav" class="sidenav" aria-label="Menú principal" role="navigation">
     <button type="button" onclick="mostrarSeccion('retos')" data-seccion="retos" class="nav-btn activo">
-        <i data-lucide="list-check" class="icono"></i>
-        Retos
+        <i data-lucide="list-check" class="icono"></i> Retos
     </button>
     <button type="button" onclick="mostrarSeccion('graficos')" data-seccion="graficos" class="nav-btn">
-        <i data-lucide="bar-chart-3" class="icono"></i>
-        Gráficos
+        <i data-lucide="bar-chart-3" class="icono"></i> Gráficos
     </button>
 </nav>
 
@@ -39,101 +41,26 @@
                 </button>
             </h1>
         </div>
+
         <div class="tabla-retos">
             <table>
                 <thead>
                 <tr>
                     <th>#</th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="file-text"></i>
-                                <span>Nombre</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="layers"></i>
-                                <span>Categoría</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="clock"></i>
-                                <span>Tiempo Estimado</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="alarm-clock"></i>
-                                <span>Tiempo Real</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="calendar-days"></i>
-                                <span>Fecha Inicial</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="calendar-check"></i>
-                                <span>Fecha Final</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="star"></i>
-                                <span>Puntos</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="award"></i>
-                                <span>Insignia</span>
-                            </span>
-                    </th>
-                    <th>
-                            <span class="th-icon-text">
-                                <i data-lucide="trash-2"></i>
-                            </span>
-                    </th>
+                    <th><i data-lucide="file-text"></i> Nombre</th>
+                    <th><i data-lucide="layers"></i> Etapa</th>
+                    <th><i data-lucide="clock"></i> Tiempo Estimado</th>
+                    <th><i data-lucide="alarm-clock"></i> Tiempo Real</th>
+                    <th><i data-lucide="calendar-days"></i> Fecha Inicial</th>
+                    <th><i data-lucide="calendar-check"></i> Fecha Final</th>
+                    <th><i data-lucide="star"></i> Puntos</th>
+                    <th><i data-lucide="award"></i> Insignia</th>
+                    <th><i data-lucide="trash-2"></i></th>
                 </tr>
                 </thead>
                 <tbody id="tabla-cuerpo-retos">
-                <!-- Fila inicial predeterminada con íconos de insignia -->
-                <tr>
-                    <td>1</td>
-                    <td><input type="text" placeholder="Nombre del reto" /></td>
-                    <td>
-                        <select>
-                            <option>Esculpido</option>
-                            <option>Retopología</option>
-                            <option>UVs + Bake</option>
-                            <option>Texturizado</option>
-                            <option>Animación</option>
-                            <option>Motor Unity</option>
-                        </select>
-                    </td>
-                    <td><input type="number" placeholder="Horas estimadas" /></td>
-                    <td><input type="number" placeholder="Horas reales" /></td>
-                    <td><input type="date" /></td>
-                    <td><input type="date" /></td>
-                    <td><input type="number" placeholder="Puntos" /></td>
-                    <td>
-                        <div style="display: flex; gap: 6px; justify-content: center;">
-                            <i data-lucide="medal"></i>
-                            <i data-lucide="sun"></i>
-                            <i data-lucide="lock"></i>
-                        </div>
-                    </td>
-                    <td>
-                        <button class="btn-eliminar" onclick="eliminarReto(this)" disabled>
-                            <i data-lucide="trash-2"></i>
-                        </button>
-                    </td>
-                </tr>
+                <!-- Se llena desde retos.js -->
                 </tbody>
-
             </table>
         </div>
     </section>
@@ -146,14 +73,37 @@
 
 </main>
 
+<!-- Scripts principales -->
 <script src="retos.js" defer></script>
+
+<!-- Inicialización general -->
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         lucide.createIcons();
         mostrarSeccion('retos');
-        document.querySelector('[data-seccion="retos"]').classList.add('activo');
+        document.querySelector('[data-seccion="retos"]')?.classList.add('activo');
     });
 </script>
 
+<!-- Modal para sumar tiempo real -->
+<div id="modal-tiempo" class="modal-overlay hidden" onclick="cerrarModal(event)">
+    <div class="modal-contenido" onclick="event.stopPropagation()">
+        <h2 class="modal-titulo">Sumar Tiempo Real</h2>
+
+        <div class="tiempo-input">
+            <input type="text" id="inputHoras" data-tipo="horas" maxlength="2" inputmode="numeric"
+                   oninput="filtrarNumeros(this)" onblur="normalizarDosDigitos(this)" value="00" /> :
+            <input type="text" id="inputMinutos" data-tipo="minutos" maxlength="2" inputmode="numeric"
+                   oninput="filtrarNumeros(this)" onblur="normalizarDosDigitos(this)" value="00" />
+        </div>
+
+        <div class="modal-botones">
+            <button onclick="confirmarSumaTiempo()" class="btn-confirmar">Agregar</button>
+            <button onclick="cerrarModal()" class="btn-cancelar">Cancelar</button>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
+
