--- a/retos-academia/index.html
+++ b/retos-academia/index.html
@@ -1,20 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Retos Academia</title>
 
     <!-- Estilos propios -->
-    <link rel="stylesheet" href="retos.css" />
+    <link rel="stylesheet" href="retos.css"/>
 
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- Cargamos Lucide @0.487.0 desde unpkg sin 'integrity' por posibles cambios binarios que rompen SRI.
+         Si se aplica CSP o se autohospeda, revisar esta decisión. -->
+    <script src="https://unpkg.com/lucide@0.487.0"></script>
+
 </head>
 <body>
 
 <!-- Botón para abrir el menú -->
-<button class="openbtn" id="menuToggle" onclick="toggleNav()" aria-label="Abrir menú lateral" aria-expanded="false" aria-controls="mySidenav">
+<button class="openbtn" id="menuToggle" onclick="toggleNav()" aria-label="Abrir menú lateral" aria-expanded="false"
+        aria-controls="mySidenav">
     ☰
 </button>
 
@@ -40,9 +44,10 @@
                 <div class="retos-header">
                     <h1 class="titulo titulo-con-boton">
                         Retos JuanK [Aprendiz - Nv 1]
-                        <button class="btn-mas" onclick="agregarReto()" aria-label="Agregar nuevo reto">
+                        <button class="btn-mas" id="btnAgregarReto" aria-label="Agregar nuevo reto">
                             <i data-lucide="plus"></i>
                         </button>
+
                     </h1>
                 </div>
 
@@ -51,16 +56,16 @@
                     <table>
                         <thead>
                         <tr>
-                            <th>#</th>
-                            <th><i data-lucide="file-text"></i> Nombre</th>
-                            <th><i data-lucide="layers"></i> Etapa</th>
-                            <th><i data-lucide="clock"></i> t Estimado</th>
-                            <th><i data-lucide="alarm-clock"></i> t Real</th>
-                            <th><i data-lucide="calendar-days"></i> Fecha Inicial</th>
-                            <th><i data-lucide="calendar-check"></i> Fecha Final</th>
-                            <th><i data-lucide="star"></i> Puntos</th> <!-- no editable -->
-                            <th><i data-lucide="medal"></i> Insignia</th>
-                            <th><i data-lucide="trash-2"></i></th>
+                            <th class="col-numero">#</th>
+                            <th class="col-nombre"><i data-lucide="file-text"></i> Nombre</th>
+                            <th class="col-etapa"><i data-lucide="layers"></i> Etapa</th>
+                            <th class="col-tiempo-estimado"><i data-lucide="clock"></i> t Estimado</th>
+                            <th class="col-tiempo-real"><i data-lucide="alarm-clock"></i> t Real</th>
+                            <th class="col-fecha-inicial"><i data-lucide="calendar-days"></i> Fecha Inicial</th>
+                            <th class="col-fecha-final"><i data-lucide="calendar-check"></i> Fecha Final</th>
+                            <th class="col-puntos"><i data-lucide="star"></i> Puntos</th>
+                            <th class="col-insignia"><i data-lucide="medal"></i> Insignia</th>
+                            <th class="col-eliminar"><i data-lucide="trash-2"></i></th>
                         </tr>
                         </thead>
                         <tbody id="tabla-cuerpo-retos">
@@ -112,9 +117,9 @@
 
         <div class="tiempo-input">
             <input type="text" id="inputHoras" data-tipo="horas" maxlength="2" inputmode="numeric"
-                   oninput="filtrarNumeros(this)" onblur="normalizarDosDigitos(this)" value="00" /> :
+                   oninput="filtrarNumeros(this)" onblur="normalizarDosDigitos(this)" value="00"/> :
             <input type="text" id="inputMinutos" data-tipo="minutos" maxlength="2" inputmode="numeric"
-                   oninput="filtrarNumeros(this)" onblur="normalizarDosDigitos(this)" value="00" />
+                   oninput="filtrarNumeros(this)" onblur="normalizarDosDigitos(this)" value="00"/>
         </div>
 
         <div class="modal-botones">
