--- a/retos-academia/index.html
+++ b/retos-academia/index.html
@@ -99,7 +99,7 @@
 </main>
 
 <!-- Scripts principales -->
-<script src="retos.js" defer></script>
+<script type="module" src="retos.js"></script>
 
 <!-- Inicialización general -->
 <script>
