Refactorización .htm .css .js. Supabase fracaso por ahora.

--- a/retos-academia/index.html
+++ b/retos-academia/index.html
@@ -99,7 +99,7 @@
 </main>
 
 <!-- Scripts principales -->
-<script type="module" src="retos.js"></script>
+<script src="retos.js" defer></script>
 
 <!-- Inicialización general -->
 <script>
