Refactorización .htm .js. Faltan .css y pruebas.

--- a/retos-academia/index.html
+++ b/retos-academia/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="retos.css" />
 
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- Cargamos Lucide @0.487.0 desde unpkg sin 'integrity' por posibles cambios binarios que rompen SRI.
+         Si se aplica CSP o se autohospeda, revisar esta decisión. -->
+    <script src="https://unpkg.com/lucide@0.487.0"></script>
+
 </head>
 <body>
 
